changed security adding ghost mode